--- a/Style/App.css
+++ b/Style/App.css
@@ -398,9 +398,183 @@ nav ul li:hover .courses_bar {
     color: var(--label-color-1);
 }
 
-
-
 /* ========= Section One Coding End ======== */
+
+/* ========= Section Web Dev Coding Start ======== */
+
+.learn_coder {
+    margin-top: 7.5rem;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.learn_coder h3 {
+    font-size: 0.9rem;
+    color: var(--label-color-4);
+}
+
+.learn_coder p {
+    color: var(--label-color-1);
+}
+
+.learn_bar {
+    gap: 20px;
+    margin-top: 4rem;
+}
+
+.learn_bar .box_learn {
+    width: 200px;
+    height: 270px;
+    background-color: white;
+    border-radius: 7px;
+    border: 1px solid rgba(221, 221, 221, 0.788);
+    transition: 0.4s;
+    padding: 1rem;
+    flex-direction: column;
+    align-items: start;
+    gap: 15px;
+}
+
+.learn_bar .box_learn:hover {
+    box-shadow: 0 0 10px 7px rgba(238, 238, 238, 0.692);
+    cursor: pointer;
+    color: var(--label-color-11);
+}
+
+.learn_bar .box_learn:hover h3 {
+    color: var(--label-color-4);
+}
+
+.learn_bar .box_learn img {
+    width: 50px;
+}
+
+.learn_bar .box_learn h3 {
+    color: black;
+}
+
+.learn_bar .box_learn p {
+    padding-top: 1rem;
+    font-size: 0.8rem;
+    line-height: 20px;
+}
+
+.learn_bar .box_learn .learn {
+    color: var(--label-color-1);
+    font-size: 0.9rem;
+    padding-top: 2rem;
+}
+
+.box_learn .learn img {
+    width: 10px;
+    margin-left: 5px;
+}
+
+/* ========= Section Web Dev Coding End ======== */
+
+/* ========= Section Online Coding Start ======== */
+
+.online_bar {
+    text-align: center;
+    margin-top: 6rem;
+}
+
+.online_bar .online_box {
+    margin-top: 4rem;
+    justify-content: space-between;
+}
+
+.online_box .image img {
+    width: 25rem;
+}
+
+.box_gap {
+    gap: 20px;
+}
+
+.online_box .box_bar .box_img {
+    width: 13rem;
+    height: 3.5rem;
+    border: 1px solid rgba(128, 128, 128, 0.37);
+    padding: 0.5rem;
+    border-radius: 7px;
+    gap: 10px;
+    box-shadow: 0 0 2px 2px rgba(173, 173, 173, 0.199);
+    cursor: pointer;
+}
+
+.online_box .box_bar .box_img img {
+    width: 2rem;
+}
+
+.box_bar .box_img .online_text {
+    flex-direction: column;
+    align-items: start;
+    gap: 3px;
+}
+
+.box_bar .box_img .online_text h4 {
+    font-weight: 200;
+    font-size: 0.9rem;
+}
+
+.box_img .online_text span {
+    font-size: 0.7rem;
+    color: var(--label-color-4);
+    font-weight: bold;
+}
+
+.box_bar {
+    flex-direction: column;
+    gap: 20px;
+}
+
+/* ========= Section Online Coding End ======== */
+
+/* ========= Section Challenge Coding Start ======== */
+
+.challenge {
+    flex-direction: column;
+    margin-top: 5rem;
+    gap: 10px;
+}
+
+.challenge p {
+    color: var(--label-color-1);
+}
+
+.challenge .challenge_bar {
+    flex-wrap: wrap;
+    margin-top: 2rem;
+    gap: 20px;
+    cursor: pointer;
+}
+
+.challenge .challenge_bar .free_box {
+    width: 13rem;
+    height: 3rem;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 0 5px 2px rgba(196, 196, 196, 0.459);
+    border-radius: 5px;
+    padding: 1rem;
+    gap: 15px;
+    transition: all 0.5s;
+}
+
+.challenge_bar .free_box:hover {
+    border: 1px solid var(--label-color-11);
+    transform: translateX(3px);
+}
+
+.challenge_bar .free_box img {
+    width: 25px;
+}
+
+.challenge_bar .free_box span {
+    font-size: 13px;
+}
+
+/* ========= Section Challenge Coding End ======== */
 
 
 @keyframes Geting {
