--- a/Style/Responsive Design.css
+++ b/Style/Responsive Design.css
@@ -47,8 +47,36 @@
         text-align: center;
         align-items: center;
         position: relative;
-        right: 20%;
+        right: 27%;
+        margin-top: 3rem;
+        gap: 30px;
+        width: 90%;
     }
+
+
+    .section_one .card {
+        width: 80vw;
+        margin-right: 10rem;
+    }
+
+    .box_two .card {
+       position: absolute;
+       top: 0.5rem;
+       left: -10rem;
+       width: 30rem;
+       height: 12rem;
+    }
+
+    .online_bar {
+        margin-top: 20rem;
+    }
+
+    .online_box {
+        flex-direction: column;
+    }
+    
+
+
 }
 
 /* =========== Responsive 769PX =========== */
@@ -65,6 +93,35 @@
     .home_bar .logo_one {
         gap: 0;
     }
+
+    .section_one .card {
+        position: relative;
+        right: 5rem;
+    }
+
+    
+    .box_two .card {
+        position: absolute;
+        top: 0.5rem;
+        left: -18rem;
+        /* width: 30rem;
+        height: 12rem; */
+     }
+
+     .box_gap {
+        margin-top: 3rem;
+     }
+
+     .section_one .box_there {
+        margin-right: 4rem;
+     }
+
+     .online_box .image img {
+        width: 60vw;
+    }
+    
+
+
 }
 
 /* =========== Responsive 500PX =========== */
@@ -101,9 +158,22 @@
     .logo_pro img {
         display: none;
     }
+
+    .section_one .card {
+        position: relative;
+        right: 6rem;
+    }
+
+    .box_there {
+        padding-right: 60px;
+    }
+
+    .box_there p {
+        width: 130%;
+    }
 }
 
-/* ============ Responsive 370px ============ */
+/* ============ Responsive 481px ============ */
 @media (max-width: 481px) {
     .home .home_bar .logo_pro h3 {
         font-size: 1rem;
@@ -124,6 +194,26 @@
     .home .home_bar .logo_pro button {
         padding: 1rem 1rem;
         font-size: 0.6rem;
+    }
+
+    .box_one .card {
+        margin-left: 1.5rem;
+
+    }
+
+    .box_two {
+        top: 90rem;
+        left: 19rem;
+        width: 37rem;
+    }
+
+    .section_one .box_there {
+        margin-right: 163px;
+        width: 100%;
+    }
+
+    .online_bar .box_gap {
+        flex-direction: column;
     }
 
 }
